--- a/package.json
+++ b/package.json
@@ -29,13 +29,27 @@
     "concurrently": "^5.3.0",
     "copyfiles": "^2.3.0",
     "cssmin": "^0.4.3",
+    "grunt": "^1.3.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.1.1",
     "htmlmin": "0.0.7",
+    "jit-grunt": "^0.10.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.16.1",
     "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.6.0"
   }
