--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/michelleg21/guia-hoteles#readme",
   "devDependencies": {
+    "gulp-usemin": "^0.3.30",
     "lite-server": "^2.5.4"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "browser": "^0.2.6",
     "concurrently": "^5.3.0",
     "copyfiles": "^2.3.0",
     "cssmin": "^0.4.3",
+    "del": "^5.1.0",
     "grunt": "^1.3.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^2.0.0",
@@ -41,6 +44,14 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.3.1",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "jquery": "^3.5.1",
